<resources>
    <string name="app_name">Status Saver for WhatsApp</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="favTip">Tip: Click On ❤ To Add It Into Favourites.</string>
    <string name="back_button">Back Button</string>
    <string name="status_image">Status Image</string>
    <string name="share_button">Share Button</string>
    <string name="download_button">Download Button</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="option_button">Option Button</string>
    <string name="home_button">Home Button</string>
    <string name="folder_access">Folder Access</string>
    <string name="to_give_access_to_all_the_whatsapp_status_it_is_necessary_to_provide_whatsapp_status_folder_permission_externally_n_npress_use_this_folder_and_gives_access_to_the_folder">To give access to all the whatsapp status. It is necessary to provide Whatsapp \'.Status\' folder permission externally.\n\nPress \'Use this folder\' and gives access to the folder.</string>
    <string name="ok">OK</string>
    <string name="favourite">Favourite</string>
    <string name="rating_button">Rating Button</string>
    <string name="home">Home</string>
    <string name="no_status_available_n_watch_some_statuses_amp_come_back_again"><![CDATA[No Status available.\n Watch some statuses & come back again.]]></string>
    <string name="no_image_status_available_n_view_some_image_statuses_amp_come_back_again"><![CDATA[No Image Status available.\n View some Image statuses & come back again.]]></string>
    <string name="no_video_status_available_n_play_some_video_statuses_amp_come_back_again"><![CDATA[No Video Status available.\n Play some video statuses & come back again.]]></string>
    <string name="status_image_preview">Status Image Preview</string>
    <string name="image_shadow">Image Shadow</string>
    <string name="video_status_preview">Video Status Preview</string>
    <string name="play_icon">Play Icon</string>
</resources>