<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/image"
        android:icon="@drawable/image"
        android:title="@string/image"
        />

    <item
        android:id="@+id/video"
        android:icon="@drawable/play"
        android:title="@string/video" />

    <item
        android:id="@+id/placeholder"
        android:title=""
        app:showAsAction="ifRoom"
        android:enabled="false"/>

    <item
        android:id="@+id/heart"
        android:icon="@drawable/heart"
        android:title="@string/favorite" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share" />

</menu>